# vmod-kafka

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  vmod_example.c  vmod_example.vcc  vmod_kafka.c  vmod_kafka.vcc
src/tests/: test01.vtc  test02.vtc
